# ChangeLog for media-gfx/gpicview
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gpicview/ChangeLog,v 1.13 2010/02/23 18:43:43 armin76 Exp $

  23 Feb 2010; Raúl Porcel <armin76@gentoo.org> gpicview-0.2.1.ebuild:
  arm stable wrt #306433

  24 Jan 2010; Raúl Porcel <armin76@gentoo.org> gpicview-0.2.1.ebuild:
  Add ~arm

  30 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> gpicview-0.2.1.ebuild:
  Stable for ppc, bug 292698

  27 Sep 2009; Markus Meier <maekke@gentoo.org> gpicview-0.2.1.ebuild:
  amd64/x86 stable, bug #286414

*gpicview-0.2.1 (04 Jul 2009)

  04 Jul 2009; Markus Meier <maekke@gentoo.org> +gpicview-0.2.1.ebuild:
  version bump, reported by Arseny Solokha in bug #276263; remove old

*gpicview-0.2.0 (01 Jun 2009)

  01 Jun 2009; Markus Meier <maekke@gentoo.org> +gpicview-0.2.0.ebuild:
  version bump, reported by Arseny Solokha, bug #271978

*gpicview-0.1.11 (24 May 2009)

  24 May 2009; Markus Meier <maekke@gentoo.org> -gpicview-0.1.10.ebuild,
  +gpicview-0.1.11.ebuild:
  version bump, reported by Arseny Solokha, bug #270135

*gpicview-0.1.10 (12 Sep 2008)

  12 Sep 2008; Markus Meier <maekke@gentoo.org> -gpicview-0.1.8.ebuild,
  -gpicview-0.1.9.ebuild, +gpicview-0.1.10.ebuild:
  bump to 0.1.10, remove old ebuilds, security bug #236525

*gpicview-0.1.9 (17 May 2008)

  17 May 2008; Samuli Suominen <drac@gentoo.org> +gpicview-0.1.9.ebuild:
  Version bump.

  17 May 2008; nixnut <nixnut@gentoo.org> gpicview-0.1.8.ebuild:
  Added ~ppc wrt bug 212370

*gpicview-0.1.8 (02 Feb 2008)

  02 Feb 2008; Samuli Suominen <drac@gentoo.org> -gpicview-0.1.7.ebuild,
  +gpicview-0.1.8.ebuild:
  Version bump.

  09 Jan 2008; Markus Meier <maekke@gentoo.org> gpicview-0.1.7.ebuild:
  add ~x86

*gpicview-0.1.7 (08 Jan 2008)

  08 Jan 2008; Samuli Suominen <drac@gentoo.org> +gpicview-0.1.7.ebuild:
  Initial commit wrt #199724.
