@@ -1,4 +1,4 @@
 DIST gpicview-0.2.1.tar.gz 422527 RMD160 5d573c0c2289fe011bbcfa156a83b0a13eb37887 SHA1 471ab9f084215cb024655c72df8fa71fb6536f58 SHA256 4c85ef5affba0812b22426217871cc18366fa570e195dc43a5e0f17fbc005639
-EBUILD gpicview-0.2.1.ebuild 636 RMD160 192d2cac6edd26a0f9a9d81dac6b2a4d8f113870 SHA1 36c688ea8bf62d82f7c08b48d943e557509a953b SHA256 f9ef4d09900744a96095a87ceb9c9a34674107a5f6c4a1899ff6dc65c7b8574a
-MISC ChangeLog 1919 RMD160 1d692c30de0d9fb53b8aa1dd6e691c3d25463496 SHA1 bcb0a34df96f49c50a6a21f2a501a177d5a70173 SHA256 649b170917a6fda4637e65ec290492fe77439d0defffd612b03050ee80795986
+EBUILD gpicview-0.2.1.ebuild 652 RMD160 9511a19dcade7d3a505dd515c838b073d9fcd23b SHA1 c80e42bb968e66c2d113d887a4ffa0a3cf132268 SHA256 4579731e08ad351ffbd5b9956701a3d18a699204ba9257bb3430fdcd916ee8e5
+MISC ChangeLog 2047 RMD160 7e84022b854e646795ec46e22d3f8227937e0ef5 SHA1 41730414656a5bd1fd94187a35a1453765b40a6c SHA256 f9be8266db1e84f88536335ab10bf74e87f1d17fe7aa538728ff78b5300596c9
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
